week01 in progress...

--- a/week01/notebook.ipynb
+++ b/week01/notebook.ipynb
@@ -59,8 +59,10 @@
       },
       "outputs": [],
       "source": [
-        "# add your code here\n",
-        "print(\"hello world\")"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "print(f\"Number of rows in the dataset: {df.shape[0]}\")"
       ]
     },
     {
@@ -94,7 +96,10 @@
       },
       "outputs": [],
       "source": [
-        "# add your code here"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "print(df.head(5))"
       ]
     },
     {
@@ -143,7 +148,10 @@
       },
       "outputs": [],
       "source": [
-        "# add your code here"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "df.info()"
       ]
     },
     {
@@ -233,7 +241,10 @@
         }
       ],
       "source": [
-        "# add your code here"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "print(df.isnull().sum())"
       ]
     },
     {
@@ -293,7 +304,13 @@
       },
       "outputs": [],
       "source": [
-        "# add your code here"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "cleaned_df = df.drop_duplicates()\n",
+        "cleaned_df = cleaned_df.dropna()\n",
+        "\n",
+        "print(cleaned_df)"
       ]
     },
     {
@@ -361,7 +378,14 @@
       },
       "outputs": [],
       "source": [
-        "# add your code here"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "cleaned_df = df.drop_duplicates()\n",
+        "cleaned_df = cleaned_df.dropna()\n",
+        "\n",
+        "\n",
+        "print(f\"Basic Statistics:\\n{cleaned_df.describe()}\")"
       ]
     },
     {
@@ -415,9 +439,7 @@
         "id": "-D8h4wFL418J"
       },
       "outputs": [],
-      "source": [
-        "# add your code here"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
