ex04 in process...

--- a/week01/notebook.ipynb
+++ b/week01/notebook.ipynb
@@ -385,7 +385,7 @@
         "cleaned_df = cleaned_df.dropna()\n",
         "\n",
         "\n",
-        "print(f\"Basic Statistics:\\n{cleaned_df.describe()}\")"
+        "print(f\"Basic Statistics:\\n{df.describe()}\")"
       ]
     },
     {
@@ -439,7 +439,23 @@
         "id": "-D8h4wFL418J"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "cleaned_df = df.drop_duplicates()\n",
+        "cleaned_df = cleaned_df.dropna()\n",
+        "\n",
+        "columns = [\"mainroad\", \"guestroom\", \"basement\", \"hotwaterheating\", \"airconditioning\", \"prefarea\", \"furnishingstatus\"]\n",
+        "\n",
+        "print(\"Distribution of numerical features\")\n",
+        "print()\n",
+        "\n",
+        "for col in columns:\n",
+        "    print(f\"Value Counts for {col}\")\n",
+        "    print(df[col].value_counts())\n",
+        "    print()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -515,7 +531,18 @@
       },
       "outputs": [],
       "source": [
-        "# add your code here"
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "cleaned_df = df.drop_duplicates()\n",
+        "cleaned_df = cleaned_df.dropna()\n",
+        "\n",
+        "columns = [\"mainroad\", \"guestroom\", \"basement\", \"hotwaterheating\", \"airconditioning\", \"prefarea\", \"furnishingstatus\"]\n",
+        "\n",
+        "for col in columns:\n",
+        "    print(f\"Unique values in '{col}':\")\n",
+        "    print(df[col].unique())\n",
+        "    print()\n"
       ]
     },
     {
@@ -581,9 +608,7 @@
         "id": "R03Q6GyC2JJi"
       },
       "outputs": [],
-      "source": [
-        "# add your code here"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
