--- a/week01/notebook.ipynb
+++ b/week01/notebook.ipynb
@@ -608,7 +608,58 @@
         "id": "R03Q6GyC2JJi"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas\n",
+        "\n",
+        "df = pandas.read_csv('Housing.csv')\n",
+        "cleaned_df = df.drop_duplicates()\n",
+        "cleaned_df = cleaned_df.dropna()\n",
+        "columns = [\"price\", \"area\", \"bedrooms\", \"bathrooms\", \"stories\", \"parking\"]\n",
+        "columns2 = [\"mainroad\", \"guestroom\", \"basement\", \"hotwaterheating\", \"airconditioning\", \"prefarea\", \"furnishingstatus\"]\n",
+        "\n",
+        "#============>histogram plots<============\n",
+        "\n",
+        "fig1, axs = plt.subplots(2, 3, figsize=(15, 8))\n",
+        "axs = axs.flatten()\n",
+        "\n",
+        "for i, col in enumerate(columns):\n",
+        "\tsns.histplot(df[col], bins=20, kde=True, ax=axs[i])\n",
+        "    \n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"plot.png\") \n",
+        "plt.close(fig1)\n",
+        "\n",
+        "#============>boxplots<============\n",
+        "\n",
+        "fig2, axs2 = plt.subplots(2, 3, figsize=(15, 8))\n",
+        "axs2 = axs2.flatten()\n",
+        "\n",
+        "for i, col in enumerate(columns):\n",
+        "\tsns.boxplot(data=df, x=col, ax=axs2[i])\n",
+        "\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"plot2.png\") \n",
+        "plt.close(fig2)\n",
+        "\n",
+        "# #============>plot pie charts<============\n",
+        "\n",
+        "fig3, axs3 = plt.subplots(3, 3, figsize=(15, 15))\n",
+        "axs3 = axs3.flatten()\n",
+        "\n",
+        "for i, col in enumerate(columns2):\n",
+        "\tcounts = df[col].value_counts()\n",
+        "\taxs3[i].pie(counts, labels=counts.index, autopct='%1.1f%%', startangle=90)\n",
+        "\taxs3[i].set_title(f'Pie Chart of {col.capitalize()}')\n",
+        "\n",
+        "fig3.delaxes(axs3[7])\n",
+        "fig3.delaxes(axs3[8])\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"plot3.png\")\n",
+        "plt.close(fig3)\n"
+      ]
     },
     {
       "cell_type": "markdown",
